--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
   <hr class="text-white">
 
   <div *ngFor="let tag of tagHistory" class="list-group list-reset">
-    <button class="list-group-item list-group-item-action">
+    <button (click)="searchGif(tag)" class="list-group-item list-group-item-action">
       {{tag | titlecase}}
     </button>
   </div>
